- overflowing page width FIXED - rapihin dan efisiensi styling - wrap header i with a tag, id changed to search-btn in HTML and JS

--- a/sigma.css
+++ b/sigma.css
@@ -1,43 +1,27 @@
-* {
+/* Basic Reset & Body Styling  */
+body {
+  background-color: #000000;
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
-html i {
-  font-size: 3em;
-}
 body.no-scroll {
   overflow: hidden;
 }
-body {
-  background-color: #000000;
-  height: 100vh;
-  /* width: 100vw; */
+body i {
+  font-size: 3em;
 }
 
 /* ---- header: search bar ---- */
 header {
+  padding: 1rem;
+  background-color: #1b7ad8;
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: 1rem;
-  background-color: #1b7ad8;
-  position: relative;
-  top: 0;
-  left: 0;
-  right: 0;
-  height: 4rem;
-  z-index: 1000;
 }
 header input[type="text"] {
   margin-right: 1rem;
-}
-header i {
-  cursor: pointer;
-}
-#search-bar:focus {
-  /* background-color: yellow; */
-  opacity: 1;
 }
 #search-bar {
   width: 20%;
@@ -46,13 +30,15 @@ header i {
   outline: none;
   font-size: 1.5rem;
 }
+#search-bar:focus {
+  opacity: 1;
+}
 
 /* --- main: the grid --- */
 main {
   padding: 1rem;
   margin-top: 4rem; /* to avoid overlap with header */
   background-color: #000000;
-  height: 100vh;
 }
 /*inventory display*/
 .inventory-grid {
